update sample project

--- a/Project/Hello/Hello.uproject
+++ b/Project/Hello/Hello.uproject
@@ -1,6 +1,6 @@
 {
 	"FileVersion": 3,
-	"EngineAssociation": "{76FC5B41-4DC4-8DD3-2257-13A3A06F097D}",
+	"EngineAssociation": "5.4",
 	"Category": "",
 	"Description": "",
 	"Modules": [
