add test code for SkipUCSModifiedProperties, not completed

--- a/Project/Hello/Config/DefaultEngine.ini
+++ b/Project/Hello/Config/DefaultEngine.ini
@@ -7,7 +7,7 @@ DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/Maps/TestMap.TestMap
+EditorStartupMap=/Game/StartMap.StartMap
 GameDefaultMap=/Game/Maps/TestMap.TestMap
 
 [/Script/IOSRuntimeSettings.IOSRuntimeSettings]
